clusters/2024_cluster/flux-system/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: webhook-ingress
    namespace: flux-system
    labels:
        name: webhook-ingress
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
    rules:
        - host: webhook.kubernetes.midnightthoughts.space
          http:
            paths:
                - pathType: Prefix
                  path: "/"
                  backend:
                    service:
                        name: webhook-receiver
                        port:
                            number: 80
    tls:
        - secretName: webhook.kubernetes.midnightthoughts.space-tls
          hosts:
            - webhook.kubernetes.midnightthoughts.space
